--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,22 @@
             app:qmui_topbar_need_separator="true" />
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="常用设备"
+                android:textSize="12sp"
+                android:gravity="bottom"
+                />
+
+        </LinearLayout>
+
         <ListView
             android:id="@+id/lv_device"
             android:layout_width="match_parent"
