--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
     <color name="s_btn_blue_bg">#00A8E1</color>
     <color name="s_btn_blue_border">#00A8E1</color>
-    <color name="s_btn_blue_text">#fdfdfd</color>
+    <color name="s_btn_blue_text">#FDFDFD</color>
 
 
     <color name="app_primary_color">#00A8E1</color>
