--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="toolbar_hight">50dp</dimen>
     <dimen name="led_size">40dp</dimen>
+    <dimen name="unit_width">400dp</dimen>
 
 </resources>
