加上少的字符

--- a/app/src/main/res/layout/unit_tianjinsanyuan_activity.xml
+++ b/app/src/main/res/layout/unit_tianjinsanyuan_activity.xml
@@ -563,7 +563,7 @@
                     android:layout_height="wrap_content"
                     android:background="#ff999999"
                     android:gravity="center"
-                    android:text="AHU"
+                    android:text="AHU05"
                     android:textColor="#ff000000"
                     android:textSize="30sp" />
 
